--- a/information.css
+++ b/information.css
@@ -272,6 +272,28 @@ a:hover {
     background:#FFC107; 
 }
 
+.contact-text{
+    padding-top: 30px;
+}
+
+.contact-mail-btn {
+    display: inline-block;
+    background-color: #9b9595;         
+    color: #000000;                   
+    padding: 10px 18px;            
+    border-radius: 6px;           
+    font-weight: 600;
+    text-decoration: none;
+    transition: 0.25s ease;       
+}
+
+/* Effet hover propre */
+.contact-mail-btn:hover {
+    color: #000000;  
+    background: #FFC107;      
+    transform: scale(1.05);        
+}
+
 .social-links { 
     display:flex; 
     gap:20px; 
